--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
+    "@types/portscanner": "^2.1.1",
     "abort-controller": "3.0.0",
     "auto-bind": "^4.0.0",
     "backbone": "1.3.3",
@@ -69,6 +70,7 @@
     "color": "^3.1.2",
     "config": "1.28.1",
     "country-code-lookup": "^0.0.19",
+    "cross-port-killer": "^1.4.0",
     "curve25519-js": "^0.0.4",
     "dompurify": "^2.0.7",
     "electron-is-dev": "^1.1.0",
@@ -95,6 +97,7 @@
     "os-locale": "5.0.0",
     "p-retry": "^4.2.0",
     "pify": "3.0.0",
+    "portscanner": "^2.2.0",
     "protobufjs": "^6.11.2",
     "queue-promise": "^2.2.1",
     "rc-slider": "^8.7.1",
@@ -118,6 +121,7 @@
     "redux-logger": "3.0.6",
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
+    "request-promise": "^4.2.6",
     "reselect": "4.0.0",
     "rimraf": "2.6.2",
     "sanitize.css": "^12.0.1",
@@ -162,6 +166,7 @@
     "@types/react-redux": "7.1.9",
     "@types/react-virtualized": "9.18.12",
     "@types/redux-logger": "3.0.7",
+    "@types/request-promise": "^4.1.48",
     "@types/rimraf": "2.0.2",
     "@types/semver": "5.5.0",
     "@types/sinon": "9.0.4",
